# pushbroom

./: .build.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  crontab  install.sh  janitor.conf  janitor.sh  pushbroom.conf  pyproject.toml  setup.py
contrib/systemd/: pushbroom.service  pushbroom.timer
src/janitor/: __init__.py  console.py  sweep.py
src/pushbroom/: __init__.py  console.py  sweep.py
test/: test_pushbroom.py
test/configs/: delete.conf  home.conf  ignore.conf  match.conf  match_and_ignore.conf  missing_numdays.conf  missing_path.conf  no_remove_empty.conf  shred_and_trash.conf  trash.conf
