[tool.poetry]
name = "pushbroom"
version = "0.1.2"
description = "Clean up your filesystem"
authors = ["Greg Anders <greg@gpanders.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpanders/pushbroom"
include = ["pushbroom.conf"]
packages = [
    { include = "pushbroom", from = "src" },
]

[tool.poetry.scripts]
pushbroom = "pushbroom.console:run"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
