[tool.poetry]
name = "pushbroom"
version = "1.0.0"
description = "Clean up your filesystem"
authors = ["Gregory Anders <greg@gpanders.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpanders/pushbroom"
include = ["CHANGELOG.md", "pushbroom.conf"]

[tool.poetry.scripts]
pushbroom = "pushbroom.console:run"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
